Add a setting to allow closing windows from scripts

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -279,6 +279,20 @@ AllowRunningOfInsecureContent:
     WebCore:
       default: false
 
+AllowScriptsToCloseWindows:
+  type: bool
+  status: embedder
+  humanReadableName: "Allow scripts to close windows"
+  humanReadableDescription: "Allow scripts to close windows"
+  condition: PLATFORM(WPE)
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
+
 AllowSettingAnyXHRHeaderFromFileURLs:
   type: bool
   status: embedder
