--- a/Source/WebKit/UIProcess/API/glib/WebKitSettings.h.in
+++ b/Source/WebKit/UIProcess/API/glib/WebKitSettings.h.in
@@ -569,6 +569,13 @@ WEBKIT_API void
 webkit_settings_set_enable_non_composited_webgl                (WebKitSettings *settings,
                                                                 gboolean        enabled);
 
+WEBKIT_API gboolean
+webkit_settings_get_allow_scripts_to_close_windows              (WebKitSettings *settings);
+
+WEBKIT_API void
+webkit_settings_set_allow_scripts_to_close_windows              (WebKitSettings *settings,
+                                                                 gboolean        allowed);
+
 G_END_DECLS
 
 #endif /* WebKitSettings_h */
