--- a/Source/WebKit/UIProcess/API/glib/WebKitSettings.h.in
+++ b/Source/WebKit/UIProcess/API/glib/WebKitSettings.h.in
@@ -570,6 +570,20 @@ webkit_settings_set_enable_non_composited_webgl                (WebKitSettings *
                                                                 gboolean        enabled);
 
 WEBKIT_API gboolean
+webkit_settings_get_allow_running_of_insecure_content          (WebKitSettings *settings);
+
+WEBKIT_API void
+webkit_settings_set_allow_running_of_insecure_content          (WebKitSettings *settings,
+                                                                gboolean        allowed);
+
+WEBKIT_API gboolean
+webkit_settings_get_allow_display_of_insecure_content          (WebKitSettings *settings);
+
+WEBKIT_API void
+webkit_settings_set_allow_display_of_insecure_content          (WebKitSettings *settings,
+                                                                gboolean        allowed);
+
+WEBKIT_API gboolean
 webkit_settings_get_allow_scripts_to_close_windows              (WebKitSettings *settings);
 
 WEBKIT_API void
