Add a property to WebKitWebsiteDataManager to set the LocalStorage quota.

--- a/Source/WebCore/page/Settings.yaml
+++ b/Source/WebCore/page/Settings.yaml
@@ -271,6 +271,12 @@ LocalStorageDatabasePath:
     WebCore:
       default: '{ }'
 
+LocalStorageQuota:
+  type: uint32_t
+  defaultValue:
+    WebCore:
+      default: 5242880
+
 MaximumAccelerated2dCanvasSize:
   type: uint32_t
   defaultValue:
