--- a/Source/WebKit/NetworkProcess/NetworkProcessCreationParameters.serialization.in
+++ b/Source/WebKit/NetworkProcess/NetworkProcessCreationParameters.serialization.in
@@ -45,6 +45,7 @@ struct WebKit::NetworkProcessCreationParameters {
     WebCore::HTTPCookieAcceptPolicy cookieAcceptPolicy
     Vector<String> languages
     std::optional<MemoryPressureHandler::Configuration> memoryPressureHandlerConfiguration
+    uint32_t localStorageQuota
 #endif
 
     Vector<String> urlSchemesRegisteredAsSecure
